# phishurl-parser

./: Cargo.toml  README.md
src/: main.rs
